--- a/about.html
+++ b/about.html
@@ -45,7 +45,12 @@
             <div class="col-lg-4 col-md-12">
               <div class="logo">
                 <a href="index.html">
-                  <h1>SCUBE SPACES</h1>
+                  <!-- <h1>SCUBE SPACES</h1> -->
+                  <img
+                    src="img/SSLogopng.png"
+                    alt="Logo"
+                    style="width: 150px; height: auto"
+                  />
                   <!-- <img src="img/logo.jpg" alt="Logo"> -->
                 </a>
               </div>
