--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
             <div class="col-lg-4 col-md-12">
               <div class="logo">
                 <a href="index.html">
-                  <h1>SCUBE SPACES</h1>
-                  <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                  <!-- <h1>SCUBE SPACES</h1> -->
+                  <img
+                    src="img/SSLogopng.png"
+                    alt="Logo"
+                    style="width: 150px; height: auto"
+                  />
                 </a>
               </div>
             </div>
@@ -579,7 +583,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
               <div class="team-item">
                 <div class="team-img">
-                  <img src="img/team-1.jpg" alt="Team Image" />
+                  <img src="img/sumantra.jpeg" alt="Team Image" />
                 </div>
                 <div class="team-text">
                   <h2>Sumantra Mondal</h2>
@@ -604,7 +608,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
               <div class="team-item">
                 <div class="team-img">
-                  <img src="img/team-2.jpg" alt="Team Image" />
+                  <img src="img/sujata.jpeg" alt="Team Image" />
                 </div>
                 <div class="team-text">
                   <h2>Sujata Dey</h2>
@@ -629,7 +633,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
               <div class="team-item">
                 <div class="team-img">
-                  <img src="img/team-3.jpg" alt="Team Image" />
+                  <img src="img/umesh.png" alt="Team Image" />
                 </div>
                 <div class="team-text">
                   <h2>Umesh RS</h2>
@@ -654,7 +658,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
               <div class="team-item">
                 <div class="team-img">
-                  <img src="img/team-4.jpg" alt="Team Image" />
+                  <img src="img/nivedita.jpg" alt="Team Image" />
                 </div>
                 <div class="team-text">
                   <h2>Nivedita Bhattacharjee</h2>
