changes done in few sections

--- a/index.html
+++ b/index.html
@@ -228,8 +228,9 @@
                 <div class="feature-text">
                   <h3>Expert Worker</h3>
                   <p>
-                    Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare
-                    velit non
+                    A team of highly experienced Laboratory practitioner / Lab
+                    Planner / MEP Engineer / Architects / Civil Engineer / Urban
+                    Planner / Interior Designer.
                   </p>
                 </div>
               </div>
@@ -242,8 +243,9 @@
                 <div class="feature-text">
                   <h3>Quality Work</h3>
                   <p>
-                    Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare
-                    velit non
+                    Our intent always to provide best services in affordable
+                    budget which gives the sustainable solutions by creating a
+                    global standard benchmark.
                   </p>
                 </div>
               </div>
@@ -256,8 +258,9 @@
                 <div class="feature-text">
                   <h3>24/7 Support</h3>
                   <p>
-                    Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare
-                    velit non
+                    We strongly believe in teamwork and giving the desired
+                    output by maintaining a close involvement in the whole
+                    process .
                   </p>
                 </div>
               </div>
@@ -523,7 +526,7 @@
       <!-- Service End -->
 
       <!-- Video Start -->
-      <div class="video wow fadeIn" data-wow-delay="0.1s">
+      <!-- <div class="video wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
           <button
             type="button"
@@ -555,9 +558,9 @@
                 aria-label="Close"
               >
                 <span aria-hidden="true">&times;</span>
-              </button>
-              <!-- 16:9 aspect ratio -->
-              <div class="embed-responsive embed-responsive-16by9">
+              </button> -->
+      <!-- 16:9 aspect ratio -->
+      <!-- <div class="embed-responsive embed-responsive-16by9">
                 <iframe
                   class="embed-responsive-item"
                   src=""
@@ -569,11 +572,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Video End -->
 
       <!-- Team Start -->
-      <div class="team">
+      <!-- <div class="team">
         <div class="container">
           <div class="section-header text-center">
             <p>Our Team</p>
@@ -682,14 +685,15 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Team End -->
 
       <!-- FAQs Start -->
       <div class="faqs">
         <div class="container">
           <div class="section-header text-center">
-            <p>Frequently Asked Question</p>
+            <!-- <p>Frequently Asked Question</p> -->
+            <p>Our Offerings</p>
             <h2>You May Ask</h2>
           </div>
           <div class="row">
@@ -702,7 +706,7 @@
                       data-toggle="collapse"
                       href="#collapseOne"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Geotechnical Site Survey
                     </a>
                   </div>
                   <div
@@ -711,9 +715,9 @@
                     data-parent="#accordion-1"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -724,7 +728,7 @@
                       data-toggle="collapse"
                       href="#collapseTwo"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Detail Project analysis
                     </a>
                   </div>
                   <div
@@ -733,9 +737,9 @@
                     data-parent="#accordion-1"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -746,7 +750,7 @@
                       data-toggle="collapse"
                       href="#collapseThree"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Planning & Designing
                     </a>
                   </div>
                   <div
@@ -755,9 +759,9 @@
                     data-parent="#accordion-1"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -768,7 +772,7 @@
                       data-toggle="collapse"
                       href="#collapseFour"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Detailed cost analysis
                     </a>
                   </div>
                   <div
@@ -777,9 +781,9 @@
                     data-parent="#accordion-1"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -790,7 +794,7 @@
                       data-toggle="collapse"
                       href="#collapseFive"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Infrastructural support
                     </a>
                   </div>
                   <div
@@ -799,9 +803,9 @@
                     data-parent="#accordion-1"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -816,7 +820,7 @@
                       data-toggle="collapse"
                       href="#collapseSix"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Landscaping
                     </a>
                   </div>
                   <div
@@ -825,9 +829,9 @@
                     data-parent="#accordion-2"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -838,7 +842,7 @@
                       data-toggle="collapse"
                       href="#collapseSeven"
                     >
-                      Lorem ipsum dolor sit amet?
+                      PMC
                     </a>
                   </div>
                   <div
@@ -847,9 +851,9 @@
                     data-parent="#accordion-2"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -860,7 +864,7 @@
                       data-toggle="collapse"
                       href="#collapseEight"
                     >
-                      Lorem ipsum dolor sit amet?
+                      On time Delivery
                     </a>
                   </div>
                   <div
@@ -869,9 +873,9 @@
                     data-parent="#accordion-2"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -882,7 +886,7 @@
                       data-toggle="collapse"
                       href="#collapseNine"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Necessary Certification
                     </a>
                   </div>
                   <div
@@ -891,9 +895,9 @@
                     data-parent="#accordion-2"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -904,7 +908,7 @@
                       data-toggle="collapse"
                       href="#collapseTen"
                     >
-                      Lorem ipsum dolor sit amet?
+                      Project Execution
                     </a>
                   </div>
                   <div
@@ -913,9 +917,9 @@
                     data-parent="#accordion-2"
                   >
                     <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus nec pretium mi. Curabitur facilisis ornare velit
-                      non.
+                      non. -->
                     </div>
                   </div>
                 </div>
@@ -1181,8 +1185,7 @@
               <div class="newsletter">
                 <h2>Newsletter</h2>
                 <p>
-                  Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi.
-                  Curabitur facilisis ornare velit non vulpu
+                  Join our newsletter subscription to get latest news & update
                 </p>
                 <div class="form">
                   <input class="form-control" placeholder="Email here" />
@@ -1204,12 +1207,18 @@
         <div class="container copyright">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
+              <p>
+                &copy; <a href="#">SCUBE SPACES Pvt. Ltd.</a>, All Right
+                Reserved.
+              </p>
             </div>
 
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
             <div class="col-md-6">
-              <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+              <p>
+                Designed By
+                <a href="https://www.mpsoftsoln.com">M.P Software Solutions</a>
+              </p>
             </div>
           </div>
         </div>
