--- a/index.html
+++ b/index.html
@@ -115,11 +115,12 @@
               id="navbarCollapse"
             >
               <div class="navbar-nav mr-auto">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="#home" class="nav-item nav-link active">Home</a>
                 <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
-                <a href="service.html" class="nav-item nav-link">Service</a>
-                <a href="team.html" class="nav-item nav-link">Team</a>
-                <a href="portfolio.html" class="nav-item nav-link">Project</a>
+                <a href="#service" class="nav-item nav-link">Service</a>
+                <!-- <a href="#team" class="nav-item nav-link">Team</a> -->
+                <a href="#about" class="nav-item nav-link">About</a>
+                <a href="#project" class="nav-item nav-link">Project</a>
                 <!-- <div class="nav-item dropdown">
                   <a
                     href="#"
@@ -132,7 +133,7 @@
                     <a href="single.html" class="dropdown-item">Single Page</a>
                   </div>
                 </div> -->
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="#contact" class="nav-item nav-link">Contact</a>
               </div>
               <!-- <div class="ml-auto">
                 <a
@@ -154,9 +155,9 @@
           <li data-target="#carousel" data-slide-to="1"></li>
           <li data-target="#carousel" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner" id="home">
           <div class="carousel-item active">
-            <img src="img/carousel-1.jpg" alt="Carousel Image" />
+            <img src="img/carousel-5.jpg" alt="Carousel Image" />
             <div class="carousel-caption">
               <p class="animated fadeInRight">We Are Professional</p>
               <h1 class="animated fadeInLeft">For Your Dream Project</h1>
@@ -169,7 +170,7 @@
           </div>
 
           <div class="carousel-item">
-            <img src="img/carousel-2.jpg" alt="Carousel Image" />
+            <img src="img/carousel-6.jpg" alt="Carousel Image" />
             <div class="carousel-caption">
               <p class="animated fadeInRight">Professional Builder</p>
               <h1 class="animated fadeInLeft">We Build Your Home</h1>
@@ -271,7 +272,7 @@
       <!-- Feature End-->
 
       <!-- About Start -->
-      <div class="about wow fadeInUp" data-wow-delay="0.1s">
+      <div id="about" class="about wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-5 col-md-6">
@@ -316,7 +317,7 @@
       <!-- About End -->
 
       <!-- Fact Start -->
-      <div class="fact">
+      <!-- <div class="fact">
         <div class="container-fluid">
           <div class="row counters">
             <div class="col-md-6 fact-left wow slideInLeft">
@@ -365,11 +366,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Fact End -->
 
       <!-- Service Start -->
-      <div class="service">
+      <div id="service" class="service">
         <div class="container">
           <div class="section-header text-center">
             <p>Our Services</p>
@@ -379,7 +380,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
               <div class="service-item">
                 <div class="service-img">
-                  <img src="img/service-1.jpg" alt="Image" />
+                  <img src="img/service-1t.png" alt="Image" />
                   <div class="service-overlay">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -393,7 +394,7 @@
                   <h3>Consultancy</h3>
                   <a
                     class="btn"
-                    href="img/service-1.jpg"
+                    href="img/service-1t.png"
                     data-lightbox="service"
                     >+</a
                   >
@@ -403,7 +404,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
               <div class="service-item">
                 <div class="service-img">
-                  <img src="img/service-2.jpg" alt="Image" />
+                  <img src="img/service-3t.png" alt="Image" />
                   <div class="service-overlay">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -417,7 +418,7 @@
                   <h3>Designing 2D/3D</h3>
                   <a
                     class="btn"
-                    href="img/service-2.jpg"
+                    href="img/service-3t.png"
                     data-lightbox="service"
                     >+</a
                   >
@@ -427,7 +428,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
               <div class="service-item">
                 <div class="service-img">
-                  <img src="img/service-3.jpg" alt="Image" />
+                  <img src="img/service-2t.png" alt="Image" />
                   <div class="service-overlay">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -441,7 +442,7 @@
                   <h3>Laboratory Planning</h3>
                   <a
                     class="btn"
-                    href="img/service-3.jpg"
+                    href="img/service-2t.png"
                     data-lightbox="service"
                     >+</a
                   >
@@ -1062,20 +1063,20 @@
       <!-- Testimonial End -->
 
       <!-- Blog Start -->
-      <div class="blog">
+      <div id="project" class="blog">
         <div class="container">
           <div class="section-header text-center">
-            <p>Latest Blog</p>
-            <h2>Latest From Our Blog</h2>
+            <p>Latest</p>
+            <h2>Our Latest Projects</h2>
           </div>
           <div class="row">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
               <div class="blog-item">
                 <div class="blog-img">
-                  <img src="img/blog-1.jpg" alt="Image" />
+                  <img src="img/blog-4.jpeg" alt="Image" />
                 </div>
                 <div class="blog-title">
-                  <h3>Lorem ipsum dolor sit</h3>
+                  <h3>The 42 Kolkata</h3>
                   <a class="btn" href="">+</a>
                 </div>
                 <div class="blog-meta">
@@ -1084,9 +1085,8 @@
                 </div>
                 <div class="blog-text">
                   <p>
-                    Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi.
-                    Curabitur facilisis ornare velit non vulputate. Aliquam
-                    metus tortor
+                    The 42 is a residential skyscraper in Kolkata in the state
+                    of West Bengal, India. It is located in Chowringhee,
                   </p>
                 </div>
               </div>
@@ -1094,10 +1094,10 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp">
               <div class="blog-item">
                 <div class="blog-img">
-                  <img src="img/blog-2.jpg" alt="Image" />
+                  <img src="img/blog-5.jpg" alt="Image" />
                 </div>
                 <div class="blog-title">
-                  <h3>Lorem ipsum dolor sit</h3>
+                  <h3>Imperial Towers, Mumbai</h3>
                   <a class="btn" href="">+</a>
                 </div>
                 <div class="blog-meta">
@@ -1106,9 +1106,8 @@
                 </div>
                 <div class="blog-text">
                   <p>
-                    Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi.
-                    Curabitur facilisis ornare velit non vulputate. Aliquam
-                    metus tortor
+                    The Imperial is a modernist style twin-tower residential
+                    skyscraper complex in Mumbai, India.
                   </p>
                 </div>
               </div>
@@ -1116,10 +1115,10 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
               <div class="blog-item">
                 <div class="blog-img">
-                  <img src="img/blog-3.jpg" alt="Image" />
+                  <img src="img/blog-6.jpeg" alt="Image" />
                 </div>
                 <div class="blog-title">
-                  <h3>Lorem ipsum dolor sit</h3>
+                  <h3>Atmosphere Kolkata Deya</h3>
                   <a class="btn" href="">+</a>
                 </div>
                 <div class="blog-meta">
@@ -1128,9 +1127,8 @@
                 </div>
                 <div class="blog-text">
                   <p>
-                    Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi.
-                    Curabitur facilisis ornare velit non vulputate. Aliquam
-                    metus tortor
+                    It is a wonderfully crafted Residential property. Designed
+                    to cater to the needs of different individuals
                   </p>
                 </div>
               </div>
@@ -1142,7 +1140,7 @@
 
       <!-- Footer Start -->
       <div class="footer wow fadeIn" data-wow-delay="0.3s">
-        <div class="container">
+        <div id="contact" class="container">
           <div class="row">
             <div class="col-md-6 col-lg-3">
               <div class="footer-contact">
